# gtk4-textview-grammar

./: LICENSE  README.md  meson.build
src/: Application.vala  Functions.vala  GrammarChecker.vala  Markdown.vala  Window.vala
src/Enrichments/: Markdown.vala
src/Widgets/: Editor.vala  Library.vala  Sheets.vala
